# realenv-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  local_validate.py  openenv  openenv.yaml  openenv_validate.py  pyproject.toml  results.json  tasks_config.py
futuristic-ui/: index.html  script.js
server/: app.py  baseline_agent.py  benchmark.py  graders.py  main3.py  main5.py  openenv.yaml  requirements.txt  results.json  run.sh  streamlit_app.py  tasks_config.py
server/env/: environment.py  models.py
server/graders/: __init__.py  base.py  easy_grader.py  hard_grader.py  medium_grader.py
server/static/: index.html  style.css
server/tasks/: registry.py
src/: app.py  baseline_agent.py  benchmark.py  main.py  main1.py  main2.py  main4.py  main6.py  mock_agent.py  requirements.txt  results.json
src/env/: environment.py
src/graders/: hard_grader.py
src/static/: script.js
src/tasks/: registry.py
